Source/WebCore: Re-implement backFaceVisibility to avoid dealing with perspective w < 0 problem https://bugs.webkit.org/show_bug.cgi?id=84059

Reviewed by Adrienne Walker.

Unit tests added to CCMathUtilTest.cpp.

This patch changes the implementation of backFaceIsVisible so that
it doesn't need to deal with the w < 0 problem from of perspective
projections. Instead, it is equally correct to simply use the
inverse-transpose of the matrix, and quickly check the third row,
third column element. Additionally, it was appropriate to move
this function into TransformationMatrix itself.

Making this change fixes some issues related to disappearing
layers in Chromium (where the compositor incorrectly thought that
the back face was visible, and skipped the layer).

* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::calculateVisibleLayerRect):
(WebCore::layerShouldBeSkipped):
* platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::TransformationMatrix::isBackFaceVisible):
(WebCore):
* platform/graphics/transforms/TransformationMatrix.h:
(TransformationMatrix):

Source/WebKit/chromium: [chromium] re-implement backFaceVisibility to avoid dealing with perspective w<0 problem
https://bugs.webkit.org/show_bug.cgi?id=84059

Reviewed by Adrienne Walker.

* WebKit.gypi:
* tests/CCMathUtilTest.cpp: Added.
(WebCore):
(WebCore::TEST):


Canonical link: https://commits.webkit.org/102525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115386 268f45cc-cd09-0410-ab3c-d52691b4dbfc